this is my weather fotcast

--- a/style.css
+++ b/style.css
@@ -1,128 +1,145 @@
 *{
     margin: 0;
     padding: 0;
-}
-
-.main{
-    width: 100%;
-    background: url(pic/bg.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    position: relative;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
     font-family: sans-serif;
 }
 
-.navbar{
-    width: 86%;
+body{
+    min-height: 100vh;
     display: flex;
-    margin: auto;
-    padding: 15px 0;
+    justify-content: center;
     align-items: center;
+    background-color: #000;
+}
+
+.container{
+    width: 400px;
+    height: min-content;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 28px;
+}
+
+.search-box{
+    width: 100%;
+    height: min-content;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.navbar .logo{
-    width: 160px;
+.search-box input{
+    width: 84%;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: #000;
+    background-color: #e6f5fb;
+    padding: 12px 16px;
+    border-radius: 14px;
+}
+
+.search-box input::placeholder{
+    color: #000;
+}
+
+.search-box button{
+    width: 46px;
+    height: 46px;
+    background-color: #e6f5fb;
+    border-radius: 50%;
     cursor: pointer;
-    margin-top: -3%;
-    margin-left: -2%;
+    font-size: 20px;
 }
 
-ul{
-    margin-top: -4%;
-}
-
-ul li{
-    list-style: none;
-    display: inline-block;
-    padding: 10px 16px;
-}
-
-ul li a{
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    color: darkslategray;
-    margin-top: -3%;
-    transition: .4s ease;
-
-}
-
-ul li a:hover{
-    color: rgb(230,104,59);
-}
-
-.info{
-    margin-left: 7%;
-    margin-top: 6%;
-}
-
-.info h1{
-    font-size: 65px;
-    color: rgb(36,32,30);
-}
-
-.info h3{
-    font-size: 18px;
-    letter-spacing: 1px;
-    line-height: 24px;
-}
-
-.info span{
-    color: rgb(230,104,59);
-}
-
-.info a{
-    text-decoration:  none;
+.search-box button:hover{
     color: #fff;
-    background: rgb(36,32,30);
-    margin: 26px 0;
-    padding: 10px 18px;
-    border-radius: 10px;
-    display: inline-block;
-    transition: .4s ease;
+    background-color: #ababab;
 }
 
-.info a:hover{
-    background: rgb(59,174,209);
+.weather-body{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-block: 20px;
+    display: none;
+}
+.weather-body img{
+    width: 60%;
 }
 
-.image{
-    width: 30%;
-    height: 60%;
-    position: absolute;
-    right: 100px;
-    bottom: 0;
+.weather-box{
+    margin-block: 20px;
+    text-align: center;
 }
 
-.image img{
-    position: absolute;
-    height: 140%;
-    left: 40%;
-    transform: translate(-55%);
-    bottom: 0;
-    transition: left 2s ease;
-}
-
-.image:hover .girl{
-    left: 55%;
-}
-
-.icons a{
-    text-decoration: none;
-    color: #000;
-}
-
-.icons ion-icon{
-    margin-left: 7%;
-    color: #000;
-    margin-right: -60px;
+.weather-box .temperature{
     font-size: 40px;
-    transition: .4s ease;
-    
+    font-weight: 800;
+    position: relative;
 }
 
-.icons ion-icon:hover{
-    color: rgb(59,174,209);
+.weather-box .temperature sup{
+    font-size: 20px;
+    position: absolute;
+    font-weight: 600;
+}
+
+.weather-box .description{
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.weather-details{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.humidity, .wind{
+    display: flex;
+    align-items: center;
+}
+
+.humidity{
+    margin-left: 20px;
+}
+
+.wind{
+    margin-right: 20px;
+}
+
+.weather-details i{
+    font-size: 36px;
+}
+
+.weather-details .text{
+    margin-left: 10px;
+    font-size: 16px;
+}
+
+.text span{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.location-not-found{
+    margin-top: 20px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.location-not-found h1{
+    font-size: 20px;
+    color: #6b6b6b;
+    margin-block-end: 15px;
+}
+.location-not-found img{
+    width: 80%;
 }
